# sketch

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  bot.py  commands.py  config.py  dex.py  entrypoint.py  guild_config.py  logging_setup.py  pokepaste_validator.py  pyproject.toml  requirements-dev.txt  requirements.txt  sheets_client.py  text_search.py
.claude/commands/: revision.md  squash-message.md
.claude/rules/: py-unittest.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  idea.yml  (+1 more)
deploy/: DEPLOY.md  env.example  launch.sh  sketch.service
sketch/: __main__.py  bot.py  commands.py  config.py  logging_setup.py  natures.py  pokepaste_validator.py  team.py  teamsource.py
tests/: conftest.py  test_add_team_seed.py  test_add_team_vrpaste.py  test_commands.py  test_convert_bank.py  test_convert_ots.py  test_convert_ots_command.py  test_converter.py  test_delete_team.py  test_dex_index.py  test_ev_matcher.py  test_ev_model.py  test_guild_config.py  test_llm_guess.py  test_name_lookup.py  test_normalize.py  test_pokepaste_fetcher.py  test_pokepaste_renderer.py  test_pokepaste_uploader.py  test_pokepaste_validator.py  test_preview_view.py  test_replica_cache.py  test_replica_extractor.py  test_replica_validator.py  test_search_teams.py  test_sheets_client.py  test_showdown_parser.py  test_showdown_renderer.py  test_teamsource.py  test_text_search.py  test_usage_priors.py  test_vrpaste_cache.py  test_vrpaste_fetcher.py  test_vrpaste_validator.py
(+47 files in other folders)
